@@ -1,6 +1,6 @@
 /*******************************************************************************
     Creme is a free/open-source Customer Relationship Management software
-    Copyright (C) 2015-2023  Hybird
+    Copyright (C) 2015-2024  Hybird
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as published by
@@ -164,7 +164,8 @@ creme.search.SearchBox = creme.component.Component.sub({
         if (results.count > 0) {
             this._allResultsGroup.after(results.items);
 
-            var url = new creme.ajax.URL(this.advancedSearchUrl).searchData({research: results.query});
+//            var url = new creme.ajax.URL(this.advancedSearchUrl).searchData({research: results.query});
+            var url = new creme.ajax.URL(this.advancedSearchUrl).searchData({search: results.query});
 
             this._allResultsLink.attr('href', url);
             this._allResultsLink.text(gettext('All results (%s)').format(results.count));
@@ -274,7 +275,8 @@ creme.search.SearchBox = creme.component.Component.sub({
             for (idx in data.results) {
                 var ct = data.results[idx];
 
-                var ctResultsUrl = searchUrl.searchData({ct_id: ct.id, research: query}).toString();
+//                var ctResultsUrl = searchUrl.searchData({ct_id: ct.id, research: query}).toString();
+                var ctResultsUrl = searchUrl.searchData({ct_id: ct.id, search: query}).toString();
                 var ctResults = ct.results.map(function(ctResult) {
                     return "<li class='search-result'><a href='${url}'${attrs}>${label}</a></li>".template({
                         url: ctResult.url,
