@@ -187,6 +187,7 @@
                 - These methods have been removed : get_emails(), generate_email_subject(), generate_email_body(), send_mails().
                 - You have now to implement the methods 'get_users()' & 'get_notification_content()'.
                 - In the method 'execute()' the argument "job" has been removed.
+            - In the method 'search.Searcher.search()', the argument "research" has been renamed "searched".
         # In 'creme_core.models' :
             - The model 'CremePropertyType' uses now a classical AutoField (i.e. integers) for primary key, and gets an UUIDField.
               A CharField "app_label" has been added too (the app label was given is the previous string primary key).
@@ -244,8 +245,14 @@
                   So you'll have to fix your JavaScript code if you use the URL named "creme_core__set_brick_state".
             - In 'creme_property', the brick IDs have been simplified.
               The method 'TaggedEntitiesBrick.parse_brick_id()' has been reworked in consequence.
-            - In 'search', the brick IDs have been simplified.
-              The method 'FoundEntitiesBrick.parse_brick_id()' has been reworked in consequence.
+            - In 'search' :
+                - The global variable 'MIN_RESEARCH_LENGTH' has been renamed 'MIN_SEARCH_LENGTH'.
+                - In the class 'FoundEntitiesBrick' :
+                    - The value of the attribute "id" have been simplified.
+                      The method 'parse_brick_id()' has been reworked in consequence.
+                    - The constructor argument and attribute 'research' have been rename 'searched'.
+                - In the class-view 'Search', teh context variable "research" has been renamed "searched".
+                  The related template  "creme_core/search_results.html" has been reworked of course.
         # The method 'creme_core.tests.views.base.ButtonTestCaseMixin.iter_instance_button_nodes()' has been renamed 'iter_button_nodes()'
           (because of the new method 'get_global_buttons_node()').
         # The template "creme_core/templates/creme_core/view_property_type.html" is now "creme_core/templates/creme_core/detail/property-type.html".
